--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,32 +8,11 @@
 </head>
 <body>
 
-<header class="navbar nav-bar-fixed-top navbar-default">
-  <div class="container">
-    <%= link_to "MyRecipes", "", class: "btn btn-lg btn-success", id: "logo"%>
-    <div class="nav_item">
-      <%=link_to "link1", "", class: "btn btn-default btn-warning" %>
-    </div>
-    
-    <div class="nav_item">
-      <%=link_to "link2", "", class: "btn btn-default btn-warning" %>
-    </div>
-    
-    <div class="nav_item">
-      <%=link_to "link3", "", class: "btn btn-default btn-warning" %>
-    </div>
-    
-    
-  </div>
-  
-</header>  
+<%= render 'layouts/navigation' %>
 <div class="container">
 <%= yield %>
+<%= render 'layouts/footer' %>
 
-<div class="footer">
-  
-  <p>&copy; MyRecipe 2015 </p>
-</div>
 
 </div>
 </body>
