--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar nav-bar-fixed-top navbar-default">
   <div class="container">
-    <%= link_to "MyRecipes", "", class: "btn btn-lg btn-success", id: "logo"%>
+    <%= link_to "MyRecipes", root_path, class: "btn btn-lg btn-success", id: "logo"%>
     <div class="nav_item">
       <%=link_to "link1", "", class: "btn btn-default btn-warning" %>
     </div>
@@ -10,7 +10,7 @@
     </div>
     
     <div class="nav_item">
-      <%=link_to "link3", "", class: "btn btn-default btn-warning" %>
+      <%=link_to "New Recipe", new_recipe_path, class: "btn btn-default btn-warning" %>
     </div>
     
     
