--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -2,7 +2,7 @@
 <%= render 'shared/page_title', title: @recipe.name %> 
     
     <div class="col-md-4 pull-right center">
-        <%= gravator_for @recipe.chef, size: 200 %>
+        <%= link_to gravator_for(@recipe.chef, size: 200), chef_path(@recipe.chef) %>
         <p>
             <h5>Brought to you by : <%= @recipe.chef.chefname %> </h5>
             </p>
