--- a/app/views/chefs/index.html.erb
+++ b/app/views/chefs/index.html.erb
@@ -10,7 +10,8 @@
 <% @chefs.each do |chef| %>
 <div class="row">
     <div class="col-md-4 col-md-offset-4 center">
-        <%= link_to gravator_for(chef, size: 200), chef_path(chef) %>
+        <%= link_to (gravator_for chef, size: 200), chef_path(chef)  %>
+       
         <p>
             <h5>Chef name: <%= chef.chefname %> </h5>
             
