--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -7,7 +7,7 @@
 <div class="row">
 <div class="col-md-2">
     <section class="chef_info center">
-   <%= gravator_for recipe.chef, size: 100 %> 
+   <%= link_to gravator_for(recipe.chef, size: 100), chef_path(recipe.chef) %> 
    <h5>Chef name :<%= recipe.chef.chefname %> </h5>
         
     </section>
