--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,2 +1,2 @@
-<% render 'shared/page_title', title: "Create a New Recipe" %>
+<%= render 'shared/page_title', title: "Create a New Recipe" %>
 <%= render 'form' %>
