--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -17,10 +17,12 @@
                
            </div>
            <div class ="well">
-               
+               <% if @recipe.styles.any? %>
                <p>Style: <%= render @recipe.styles %></p>
+               <% end %>
+                 <% if @recipe.ingredients.any? %>
                 <p>Ingredient: <%= render @recipe.ingredients %> </p>
-               
+               <% end %>
                <p>
                    <strong>
                        Steps:
