--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
-    <h1>Welcome to MyRecipe App</h1>
+    <h1>Welcome to Tharanya's Recipe App</h1>
     <h2>
-        This is the home page for Professional Ruby on Rails Developer Course on Udemy
+        This is Tharanya's Birthday Gift given by Chithappa@08.12.2015
          </h2>
         <%= link_to "Sign up now !", register_path, class: "btn btn-lg btn-success" %>
       </div>
