--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar nav-bar-fixed-top navbar-default">
   <div class="container">
-    <%= link_to "My Recipe", root_path, class: "btn btn-lg btn-success", id: "logo"%>
+    <%= link_to "Tharanya's Recipe Book", root_path, class: "btn btn-lg btn-success", id: "logo"%>
     <ul class="nav_ul_item">
       <li class="dropdown">
         <%= link_to '#', class: "btn btn-default btn-danger dropdown-toggle","data-toggle" => "dropdown" do %>
