--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,7 +34,7 @@
               </h3>
               
               <h2 class="left">Browse and view recipes as a guest and Sign up later</h2>
-              <p><%= link_to "Browse Recipe Listing", "", class: "btn btn-warning btn-small" %> </p>
+              <p><%= link_to "Browse Recipe Listing", recipes_path, class: "btn btn-warning btn-small" %> </p>
               
           </div>
       </div>
